* New feature: Created `console` namespace.
* New feature: Created `process` namespace.
* Fixed issue  #5: String format function.
* Fixed issue  #6: Implement getCurrentProcessPath() function.
* Fixed issue  #7: Function for absolute path to relative path.
* Fixed issue #11: joinString() fails if first element of list is an empty string.

Changes for 0.4.1:

* Fixed Travis CI scripts which was using `mkdir` to use the `-p` argument to not fail in directory already exists.

Changes for 0.4.0:

* New feature: Added support for doxygen API documentation. See build option `RAPIDASSIST_BUILD_DOC` for details.
* New feature: Implemented 'make install' command support (issue #2).
* Fixed documentation for some functions.
* Removed all submodule dependencies. Now manually downloading dependencies using scripts.
* New feature: Create build option for disabling dependency to GTest (issue #3)
* New feature: License header in all files (issue #4)

Changes for 0.3.4:

* Fixed incorrect product version in v0.3.3

Changes for 0.3.3:

* Fixed a bug in ra::string::removeEOL() where some cases were not properly handled.
* Added build option flag RAPIDASSIST_BUILD_TEST which generates RapidAssist unit tests when set to ON.
* Fixed googletest submodule path to 'lib/googletest'

Changes for 0.3.2:

* Now setting CMAKE_BUILD_TYPE to Release by default if not specified (linux only).
* Moved third party libraries to /lib folder.
* Using 'c++ best practices' file structure (/include /src /lib /test)
* Fixed project include_directories() when RapidAssist is used in other project.

Changes for 0.3.1:

* Fixed issue #1 - Use GOOGLETEST_HOME environment variable.

Changes for 0.3.0:

* New microseconds and milliseconds timers.
* Moved all methods of class gTestHelper to ra::gtesthelp namespace.
* New filesystem apis: normalizePath(), findFiles(), createFolder(), deleteFolder(), deleteFile(), hasReadAccess() and hasWriteAccess()

Changes for 0.2.0:
